# uhttp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
inc/: uhttp.h  uhttp_platform.h
src/: socket_posix.cpp  socket_win32.cpp  uri.cpp
